--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                 <a href="https://www.linkedin.com/in/rohit-tambe-1585b0257/" target="_blank"><i class="fab fa-linkedin"></i></a>
                                 <a href="https://x.com/rohi14604" target="_blank"><i class="fab fa-twitter"></i></a>
                                 <a href="https://github.com/iamrohit568" target="_blank"><i class="fab fa-github"></i></a>
-                                <a href="https://leetcode.com/u/rohittambe568/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://leetcode.com/u/rohittambe568/" target="_blank"><i class="fab fa-leetcode"></i></a>
                             </div>
                         </div>
                     </div>
